Add windows zip structure directory

--- a/Windows zip/README.html
+++ b/Windows zip/README.html
@@ -389,6 +389,9 @@ commandes pointent bien vers la bonne version de R. Si on veut mettre à
 jour les packages de Prostar2 sans changer la version de R, il suffit de
 ne faire que le point 4 précédemment décrit.</li>
 </ol>
+<p>git lfs install –skip-smudge git lfs track large_file_needed git add
+.gitattributes large_file_needed git commit -m “whatever” git lfs
+uninstall git push</p>
 </div>
 </div>
 
